--- a/src/app/Components/Customers/listing/listing.component.html
+++ b/src/app/Components/Customers/listing/listing.component.html
@@ -37,7 +37,7 @@
               </div>
               @for (item of _displayedItems; track $index) {
               <div class="payout__row">
-                <div class="payout__col">{{item.vehicleNumber}}</div>
+                <div class="payout__col uppercase">{{item.vehicleNumber}}</div>
                 <div class="payout__col">{{item.customerName}}</div>
                 <div class="payout__col">{{item.mobileNumber}}</div>
                 <div class="payout__col">{{item.email}}</div>
