--- a/src/app/Components/Customers/listing/listing.component.css
+++ b/src/app/Components/Customers/listing/listing.component.css
@@ -1,26 +1,28 @@
 .topbar-progress {
-    position: fixed;
-    top: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background-color: rgb(221, 34, 75);
+  z-index: 10000;
+  animation: loading 1.5s linear infinite;
+}
+
+@keyframes loading {
+  0% {
+    left: -100%;
+    width: 100%;
+  }
+  50% {
     left: 0;
     width: 100%;
-    height: 5px;
-    background-color: rgb(221, 34, 75);
-    z-index: 10000;
-    animation: loading 1.5s linear infinite;
   }
-  
-  @keyframes loading {
-    0% {
-      left: -100%;
-      width: 100%;
-    }
-    50% {
-      left: 0;
-      width: 100%;
-    }
-    100% {
-      left: 100%;
-      width: 10%;
-    }
+  100% {
+    left: 100%;
+    width: 10%;
   }
-  
+}
+.uppercase {
+  text-transform: uppercase;
+}
