--- a/src/app/Components/booking-car/add-and-edit/add-and-edit.component.html
+++ b/src/app/Components/booking-car/add-and-edit/add-and-edit.component.html
@@ -157,10 +157,10 @@
 
                     <div class="filters__btns">
                         <a class="button-stroke panel__button answer__button" routerLink="/booking">Cancel</a>
-                        <button *ngIf="!_btnLoading" class="button panel__button">
+                        <button *ngIf="!loading$" class="button panel__button">
                             <span>{{ _label }}</span>
                         </button>
-                        <button *ngIf="_btnLoading" class="button panel__button" disabled>
+                        <button *ngIf="loading$" class="button panel__button" disabled>
                             Please wait... <i class="fa fa-refresh fa-spin"></i>
                         </button>
                     </div>
